// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> Should render correctly 1`] = `
<div>
  <footer
    class="footerstyles__Container-sc-ojjd19-0 jwEgwh"
    id="footer"
  >
    <div
      class="footerstyles__StyledTechSpecs-sc-ojjd19-1 eCCBIR"
    >
      <span
        class="sc-jrcTuL dRJySQ tech-specsstyles__StyledParagraph-sc-1ysn53a-0 hLsLJb"
      >
        Made with love by
         
        <a
          aria-label="George (opens in a new tab)"
          class="sc-iBYQkv cCatJA"
          href="https://www.georgegillams.co.uk/"
          rel="noopener noreferrer"
          target="_blank"
        >
          George
          <div
            class="sc-ftTHYK dbfjGz"
          >
            <svg
              class="sc-gKPRtg eSdzmv sc-pyfCe hLCbyO"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
      </span>
      <span
        class="sc-jrcTuL dRJySQ tech-specsstyles__StyledParagraph-sc-1ysn53a-0 hLsLJb"
      >
        Please do not share with anyone under the legal purchase age for alcohol. Drink Responsibly.
      </span>
    </div>
  </footer>
</div>
`;

exports[`<Footer /> Should render correctly with custom className 1`] = `
<div>
  <footer
    class="footerstyles__Container-sc-ojjd19-0 jwEgwh test-custom-className"
    id="footer"
  >
    <div
      class="footerstyles__StyledTechSpecs-sc-ojjd19-1 eCCBIR"
    >
      <span
        class="sc-jrcTuL dRJySQ tech-specsstyles__StyledParagraph-sc-1ysn53a-0 hLsLJb"
      >
        Made with love by
         
        <a
          aria-label="George (opens in a new tab)"
          class="sc-iBYQkv cCatJA"
          href="https://www.georgegillams.co.uk/"
          rel="noopener noreferrer"
          target="_blank"
        >
          George
          <div
            class="sc-ftTHYK dbfjGz"
          >
            <svg
              class="sc-gKPRtg eSdzmv sc-pyfCe hLCbyO"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
      </span>
      <span
        class="sc-jrcTuL dRJySQ tech-specsstyles__StyledParagraph-sc-1ysn53a-0 hLsLJb"
      >
        Please do not share with anyone under the legal purchase age for alcohol. Drink Responsibly.
      </span>
    </div>
  </footer>
</div>
`;
